syntax = "proto3";

option csharp_namespace = "gRPCClient";

package pubsub;

service PubSub {
  
  rpc SendMessageToTopic(stream TopicMessage) returns (stream TopicMessageResponse);
}
message TopicMessage {
  bool isRegistrationMessage = 1;
  repeated string topics = 2;
  string clientId = 3;
  string message = 4;
}

message TopicMessageResponse {
  string topic = 1;
  string clientId = 2;
  repeated string messages = 3;
  bool isRegistrationResponse = 4;
  bool isSuccessful = 5;
}
